slack.css
/* ... */
.mention_day_container_div .day_divider .day_divider_label {
   border: 1px solid var(--border-dim) !important;
}

#convo_container .convo_flexpane_divider .reply_count {
   border-radius: 10px;
   padding: 0px 10px;
}

.mention_day_container_div .day_divider:before {
   background-color: transparent !important;
   border-color: var(--border-dim);
}

.day_container .day_msgs {
  border-top: 1px solid var(--border-bright) !important;
  padding-right: 10px;
  padding-left: 2px;
}

textarea, input[type="text"], #file_comment_textarea {
   background-color: var(--background) !important;
   border-color: var(--border-dim) !important;
   color: var(--text) !important;
}
textarea:focus, input[type="text"]:focus, #file_comment_textarea {
   border-color: var(--border-bright) !important;
   color: var(--text-bright) !important;
}

ts-message {
   border-radius: 5px;
   margin: 1px 5px !important;
   box-shadow: none !important;
}

ts-message:hover {
   background: var(--background-hover) !important;
}

#messages_container::after {
   background: none !important;
}

.bot_label {
   padding: 0 4px !important;
   border-radius: 3px !important;
   background: var(--background) !important;
   border: 1px solid var(--border-bright);
}


.file_container:after{
   background-image: -webkit-linear-gradient(top,rgba(255,255,255,0) 0,#333 100%) !important;
}

.rxn,
#col_channels,
#col_channels_footer,
pre,
ts-message .action_hover_container .btn_msg_action,
.file_container,
.file_container .CodeMirror .CodeMirror-code>div:before, .file_container .CodeMirror .sssh-line:before, .file_container .sssh-code .CodeMirror-code>div:before, .file_container .sssh-code .sssh-line:before,
#col_flex,
.search_message_result,
.search_result_with_extract,
#search_filters a,
.menu,
.menu #menu_items_scroller,
.btn, .btn_outline {
  background: var(--background-elevated) !important;
}


#flex_contents .heading,
#flex_contents .heading a,
#flex_contents .heading_text,
#flex_contents .subheading {
   background: var(--background) !important;
   color: var(--text) !important;
   border-color: var(--border-dim);
}

pre,
ts-message .action_hover_container .btn_msg_action,
.file_container .CodeMirror .CodeMirror-code>div pre, .file_container .CodeMirror .sssh-line pre, .file_container .sssh-code .CodeMirror-code>div pre, .file_container .sssh-code .sssh-line pre,
.search_message_result .search_message_result_meta a,
.search_message_result .search_message_result_meta .date_links a,
.flexpane_redesign #flex_contents .heading_text,
#flex_contents .subheading,
#search_filters.files #filter_files, #search_filters.messages #filter_messages,
.menu ul li a,
.btn, .btn_outline, .menu {
  color: var(--text) !important;
  border-color: var(--border-dim) !important;
}

.btn:hover:after {
   border-color: var(--border-bright);
}

.action_hover_container {
  border: 1px solid var(--border-dim) !important;
}
.ts_tip_float.btn_msg_action:not(:last-child) {
  border-right: 1px solid var(--border-dim) !important;
}
.ts_tip_float.btn_msg_action:hover {
  background-color: var(--background) !important;
}

#quick_switcher_btn{
  /*border-top-color: #333 !important;*/
  background-color: transparent;

}

.rxn,
.search_result_with_extract,
.flexbox_client.flexpane_redesign.flex_pane_showing #col_flex,
.flexpane_redesign #flex_contents .heading,
#flex_contents .subheading,
.search_segmented_control,
.menu{
 border-color: var(--border-dim) !important;
}

.search_result_with_extract {
  box-shadow: 0 1px 10px var(--background-elevated) !important;
}

.ql-placeholder {
   color: var(--text);
}

.ql-container.texty_single_line_input {
  background-color: var(--background-elevated);
  color: var(--text);
}

.ql-container .ql-editor p {
  color: var(--text);
}

#quick_switcher_btn:active, #quick_switcher_btn:focus, #quick_switcher_btn:hover {
   background-color: var(--background-elevated);
   border-color: var(--background-elevated);
}

.feature_name_tagging_client ts-message .mention, ts-message .mention,
span.match {
  border: 1px solid var(--border-bright) !important;
  background-color: var(--background-elevated) !important;
  font-weight: bold;
  padding: 2px 4px;
  margin: 2px;
  border-radius: 10px;
}

.mention > .mention {
   /* I'm assuming this is a Slack bug */
   border: none;
}

.mention_rxn {
   border-radius: 5px;
   margin: 1px 5px;
}

.mention_rxn .mention_rxn_summary .app_preview_link,
.mention_rxn .mention_rxn_summary .member_preview_link,
.mention_rxn .mention_rxn_summary .mention_rxn_summary_members {
   color: var(--text);
}

#member_mentions h3 a {
   color: var(--text-special);
}

pre.special_formatting{
  background: var(--background-elevated) !important;
}

code {
  color: var(--text-special) !important;
  background-color: var(--background-elevated) !important;
  border-color: var(--border-dim) !important;
}

.supports_custom_scrollbar:not(.slim_scrollbar) #archive_msgs_scroller_div::-webkit-scrollbar-thumb,
.supports_custom_scrollbar:not(.slim_scrollbar) #msgs_scroller_div::-webkit-scrollbar-thumb,
.supports_custom_scrollbar:not(.slim_scrollbar) #col_channels:hover #channels_scroller::-webkit-scrollbar-thumb {
   /* scrollbar draggy bit */
  color: transparent !important;
  border: 1px solid var(--scrollbar-border) !important;
  background-color: transparent !important;
}
.supports_custom_scrollbar:not(.slim_scrollbar) #archive_msgs_scroller_div::-webkit-scrollbar-track,
.supports_custom_scrollbar:not(.slim_scrollbar) #msgs_scroller_div::-webkit-scrollbar-track,
.supports_custom_scrollbar:not(.slim_scrollbar) #col_channels:hover #channels_scroller::-webkit-scrollbar-track {
   /* scrollbar endcaps */
  color: transparent !important;
  border: 1px solid var(--border-dim) !important;
  background-color: transparent !important;
}

a, a:link, a:visited{
  color: var(--text-special);
}
ts-message a .mention{
  color: var(--text-special) !important;
}
a:hover{
  color: var(--text-special) !important;
}
/* ... */

